--- a/ui/css/utilities/colors.scss
+++ b/ui/css/utilities/colors.scss
@@ -11,9 +11,9 @@
   --inherit: inherit;
   --transparent: transparent;
 
-  --qtumMainnet: #29b6af;
-  --qtumTestnet: #ff4a8d;
-  --qtumRegtest: #f6c343;
+  --htmlcoinMainnet: #29b6af;
+  --htmlcoinTestnet: #ff4a8d;
+  --htmlcoinRegtest: #f6c343;
 
   // DO NOT CHANGE
   // Required for the QR reader to work properly
